2007-03-14  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (AM_CXXFLAGS): Define ECJ_JAR_FILE.
	* classpath/configure.ac: Add --with-ecj-jar configure option.
	* classpath/gnu/classpath/Configuration.java.in (ECJ_JAR): New
	field.
	* classpath/INSTALL: Document --with-ecj-jar configure option and
	ecj jar requirement for com.sun.tools.javac support.
	* classpath/tools/Makefile.am: Build decendents of com and sun
	directories.
	* configure.ac: Substitute ECJ_JAR in stub Configuration.java.
	* gnu/classpath/Configuration.java,
	gnu/classpath/natConfiguration.cc (ecj): New method.
	(ECJ_JAR): New field.
	* scripts/makemake.tcl (scan_packages): Add com directory.
	* sources.am (property_files): Add
	classpath/resource/sun/rmi/rmic/messages.properties and
	classpath/resource/com/sun/tools/javac/messages.properties.
	* classpath/resource/com, classpath/resource/com/sun,
	classpath/resource/com/sun/tools,
	classpath/resource/com/sun/tools/javac, classpath/resource/sun,
	classpath/resource/sun/rmi, classpath/resource/sun/rmi/rmic,
	classpath/tools/classes/com, classpath/tools/classes/com/sun,
	classpath/tools/classes/com/sun/javadoc,
	classpath/tools/classes/com/sun/tools,
	classpath/tools/classes/com/sun/tools/doclets,
	classpath/tools/classes/sun, classpath/tools/classes/sun/rmi,
	classpath/tools/classes/sun/rmi/rmic, classpath/tools/com,
	classpath/tools/com/sun, classpath/tools/com/sun/javadoc,
	classpath/tools/com/sun/tools,
	classpath/tools/com/sun/tools/doclets,
	classpath/tools/com/sun/tools/javac, classpath/tools/sun,
	classpath/tools/sun/rmi, classpath/tools/sun/rmi/rmic: New
	directories.
	* classpath/resource/com/sun/tools/javac/messages.properties,
	classpath/resource/sun/rmi/rmic/messages.properties,
	classpath/tools/classes/com/sun/javadoc/ClassDoc.class,
	classpath/tools/classes/com/sun/javadoc/ConstructorDoc.class,
	classpath/tools/classes/com/sun/javadoc/Doc.class,
	classpath/tools/classes/com/sun/javadoc/DocErrorReporter.class,