@@ -1,3 +1,9 @@
+2007-03-23  Gary Benson  <gbenson@redhat.com>
+
+	* link.cc (_Jv_Linker::resolve_method_entry):
+	Ensure that the argument types and the return type of the
+	found method match those expected by the calling method.
+
 2007-03-14  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* Makefile.am (AM_CXXFLAGS): Define ECJ_JAR_FILE.
